Added : Done with the API

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div id="app">
-      <div id="chat_container"></div>
+      <div id="chat_container">
+
+      </div>
 
         <form>
           <textarea name="prompt" id="" cols="1" rows="1" placeholder="Bhai se Pucho toh..."></textarea>
