Added : Added Data

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 
         <form>
           <textarea name="prompt" id="" cols="1" rows="1" placeholder="Bhai se Pucho toh..."></textarea>
-          <button type="submit"><img src="assets/send.svg" alt="Send Image"></button>
+          <button type="submit"><img src="assets/send.svg" alt="Send Image" /></button>
         </form>
     </div>
     <script type="module" src="script.js"></script>
